syntax = "proto3";
package users;
// import "common/common.proto";

option go_package = "grpc/proto";

message User {
    string login = 1;
    string password = 2;
}

service UserController {
    rpc SignUpUser(SignUpUserRequest) returns (SignUpUserResponse);
    rpc SignInUser(SignInUserRequest) returns (SignInUserResponse);
}

message SignUpUserRequest {
    User user = 1;
}

message SignUpUserResponse {
    string token = 1;
    string error = 2;
}

message SignInUserRequest {
    User user = 1;
}

message SignInUserResponse {
    string token = 1;
    string error = 2;
}